2006-05-07 Chris Morley <ob@gaseq.co.uk>

	* oberror.h: Change classes from OBAPI to new OBERROR
	so that can be compiled separately.
	
	* src/mol.h, src/bitvec.cpp, oberror.cpp, obconversion.cpp:
	change to OBERROR extern OBMessageHandler obErrorLog;
	
	* src/obconversion.h: add #include "oberror.h";
	
	* src/obconversion.cpp: now that oberror can be accessed everywhere
	change all cerr messages to use obErrorLog.
	
	* src/fingerprint.h: replace OBAPI by OBFPTR to allow fingerprint
	code to be separately compiled.
	
	* src/formats/xml.h: add OBCOMMON so that XML classes can be
	separately compiled. Add implementation of SkipObjects for
	XMLBaseFormat and XMLConversion::SkipXML.
	
	* src/formats/obmolecformat.cpp: Add ReadNameIndex to speed access
	in files with many molecules. I wasn't going to commit this until
	it was tested a bit more, but I must have misunderstood what
	Tortoise SVN was doing.
	
	* src/GUI/OBGUI.cpp: don't crash if there are no formats.  

2006-05-06  Geoffrey Hutchison  <babel@geoffhutchison.net>

        * src/formats/smilesformat.cpp (SmiToMol): Since SMILES sets
        formal charges, turn off automatic updates. Some general cleanups
	(removing commented-out code.)

2006-05-03  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/chains.h, src/chains.cpp: Initial work on	documenting,
	indentation, and general cleanup of chains.cpp.
	(ConstrainBackbone): Check for valence of backbone atoms 
	should actually be for HvyValence() since all hydrogens are ignored.
	Fixes PR#1442779.

2006-04-27  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* Doxyfile: Add map of included files in headers to
	documentation. Need to work on removing un-necessary #includes in
	headers.

	* src/math/*: Minimize #include headers.

	* src/generic.h: Include obutil.h for triple class -- was included
	indirectly by way of vector3.h.

	* test/smartstest.cpp: Changed the way tests are counted -- per